Added contact us

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                 Hi, I'm a graduating student and a solo developer focused on solving problems by designing small apps.
                 This is my way of
                 learning and growing as a developer — one project at a time. I'm always open to improving and exploring
-                more in app development.
+                more in app development. If you have questions or concerns, email us at <a
+                    href="https://mail.google.com/mail/?view=cm&fs=1&to=banana.illukit@gmail.com"
+                    target="_blank">banana.illukit@gmail.com</a>
             </p>
         </div>
 
@@ -102,7 +104,6 @@
                 </div>
             </a>
         </section>
-
     </div>
 </body>
 
