--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- 👋 Intro -->
         <div class="about-note">
             <p style="font-size: 1.25rem;">
-                Hi, I'm a graduating student and a solo developer focused on solving problems by designing small apps.
+                Hi, I'm a solo developer focused on solving problems by designing small apps.
                 This is my way of
                 learning and growing as a developer — one project at a time. I'm always open to improving and exploring
                 more in app development. If you have questions or concerns, email us at <a
